[package]
name = "ndarray_comparison"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"
numpy = "0.15.0"
pyo3 = { version = "0.15.0", features = ["extension-module"] }


[lib]
name = "rust_ext"
crate-type = ["cdylib"]
